crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__redirect_append.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    statements: [
        Pipeline(
            Pipeline {
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            String(
                                "hi",
                            ),
                        ],
                    },
                ],
                write: Some(
                    PipelineEnd {
                        kind: Append,
                        expr: String(
                            "file.txt",
                        ),
                    },
                ),
            },
        ),
    ],
}
