crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__while_stmt.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    statements: [
        While(
            While {
                condition: Infix(
                    InfixExpr {
                        lhs: Ident(
                            Ident(
                                "x",
                            ),
                        ),
                        rhs: Number(
                            10.0,
                        ),
                        op: Eq,
                    },
                ),
                body: [
                    Pipeline(
                        Pipeline {
                            env: [],
                            commands: [
                                Command {
                                    name: "echo",
                                    args: [
                                        String(
                                            "hi",
                                        ),
                                    ],
                                    merge_stderr: false,
                                },
                            ],
                            write: None,
                        },
                    ),
                ],
            },
        ),
    ],
}
